--- a/public/index.html
+++ b/public/index.html
@@ -31,11 +31,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Encode Demo Live Status</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="MyBar"></div>
     <div id="Data"></div>
     <!--
       This HTML file is a template.
