--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="MyBar"></div>
-    <div id="Data"></div>
+    <div id="Created"></div>
+    <br />
+    <div id="Deleted"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
