--- a/public/index.html
+++ b/public/index.html
@@ -39,15 +39,6 @@
     <div id="Created"></div>
     <br />
     <div id="Deleted"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div id="Footer"></div>
   </body>
 </html>
